# step-machine

./: .gitattributes  .rusty-hook.toml  Cargo.toml  README.md  README.tpl
examples/: coin.rs
src/: json_store.rs  lib.rs  store.rs
