[package]
name = "step-machine"
version = "0.3.0"
edition = "2018"
description = "Run your CLI program as state machines with persistence and recovery abilities"
readme = "README.md"
repository = "https://github.com/imbolc/step-machine"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
typetag = "0.2"

[dev-dependencies]
anyhow = "1"
env_logger = "0.9"
rand = "0.8"
rusty-hook = "0.11"
